# rusty-py-boilerplate

./: LICENSE  README.md  pyproject.toml
guess-what/: Cargo.toml
guess-what/src/: lib.rs
src/rusty_py_boilerplate/: guess.py  main.py  maths.py
tests/: test_version.py
